<resources>
    <string name="app_name">Juice World</string>
    <string name="juice">Juices</string>
    <string name="Mockta">Mocktails</string>
    <string name="Dess">Desserts</string>
    <string name="PartyRe">Party\nReservation</string>
    <string name="scbutton">Show Cart</string>
    <string name="wlj">watermelon Juice</string>
    <string name="aj">Apple Juice</string>
    <string name="mj">Mango Juice</string>
    <string name="price">Price :-</string>
    <string name="plusbutton">+</string>
    <string name="minubutton">-</string>
    <string name="addcarbutt">ADD TO CART</string>
    <string name="val1">3</string>
    <string name="val2">2</string>
    <string name="price1">300 LKR</string>
    <string name="price2">400 LKR</string>
    <string name="price3">500 LKR</string>
    <string name="price4">600 LKR</string>
    <string name="icecream">Fruit Salad with Ice Cream</string>
    <string name="jelly">fruit salad with jelly and custard</string>
    <string name="mix">mixed fruit salad</string>
    <string name="smock">Strawberry mocktail</string>
    <string name="mmock">Mango mocktail</string>
    <string name="ormock">Orange mocktail</string>
    <string name="scart">Shopping Cart</string>
    <string name="t1">Apple Juice</string>
    <string name="t2">Mango juice</string>
    <string name="t3">Orange mocktail</string>
    <string name="t4">Mixed fruit salad</string>
    <string name="t5">Total Goods.
    </string>
    <string name="tot">1200 LKR</string>
    <string name="buttc1">Empty Cart</string>
    <string name="buttc2">Update Cart</string>
    <string name="buttc3">Checkout</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="sign_up_">Sign Up</string>
    <string name="gender">Gender</string>
    <string name="my_profile">My Profile</string>
    <string name="sample_name">Sample Name</string>
    <string name="_5">5</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="juice_world">Juice World</string>
    <string name="food_name">Food Name</string>
    <string name="prices">Price</string>
    <string name="juice_s">Juice</string>
    <string name="mocktail_s">Mocktail</string>
    <string name="dessert_s">Dessert</string>
    <string name="add">Add</string>
    <string name="logout">Logout?</string>
    <string name="value_of_purchased_goods">Value of Purchased Goods</string>
    <string name="discount">Discount</string>
    <string name="sub_total">Sub Total</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="grand_total">Grand Total</string>
    <string name="confirm_delivery">Confirm Delivery</string>
    <string name="cancel">Cancel</string>
    <string name="delivery_confirmation">Delivery Confirmation</string>
    <string name="delivery_information">Delivery Information</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="save_and_continue">Save And Continue</string>
    <string name="set_delivery_time">Set Delivery Time</string>
    <string name="now">Now</string>
    <string name="later">Later</string>
    <string name="juices">Juices</string>
    <string name="login_portal">Login Portal</string>
    <string name="show_cart">Show Cart</string>
    <string name="payment_details">Payment Details</string>
    <string name="card_type">Card Type</string>
    <string name="card_name">Card Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="security_code">Security Code</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="pay">Pay</string>
    <string name="pick_hall">Pick Hall</string>
    <string name="hall_a">Hall A (A/C)</string>
    <string name="hall_b">Hall B (Non A/C)</string>
    <string name="confirm">Confirm</string>
    <string name="sign_up_s">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="reservation">Reservation</string>
    <string name="booking_request_confirmed">Booking Request Confirmed</string>
    <string name="party_size">Party Size</string>
    <string name="hall">Hall</string>
    <string name="juice_world_will_contact_you">Juice World Will Contact You</string>
    <string name="home">Home</string>
    <string name="celebrate_your_amazing_events_with_juice_world">Celebrate Your Amazing Events With Juice World</string>
    <string name="request_for_booking">Request For Booking</string>
    <string name="small_1_10_people">Small(1-10 People)</string>
    <string name="medium_10_20_people">Medium(10-20 People)</string>
    <string name="large_more_than_20_people">Large(more than 20 People)</string>
    <string name="choose_a_hall">Choose A Hall</string>
    <string name="name">Name</string>
    <string name="price_s">Price</string>
    <string name="qty">Qty</string>
    <string name="total">Total</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="checkout">Checkout</string>
    <string name="_350_lkr">350 LKR</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="thank_you">We have successfully received your payment, Thank you for choosing Juice World</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="payments">Payments</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update_item">Update Item</string>
    <string name="update">Update</string>
    <string name="reservation_history">Reservation History</string>
</resources>