<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.CheckoutScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy"
                android:text="@string/delivery_confirmation"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/good_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/gilroy"
        android:text="@string/value_of_purchased_goods"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/discount_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gilroy"
        android:text="@string/discount"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/good_price"
        app:layout_constraintStart_toStartOf="@+id/good_price"
        app:layout_constraintTop_toBottomOf="@+id/good_price" />

    <TextView
        android:id="@+id/sub_total_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gilroy"
        android:text="@string/sub_total"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/discount_tv"
        app:layout_constraintStart_toStartOf="@+id/discount_tv"
        app:layout_constraintTop_toBottomOf="@+id/discount_tv" />

    <TextView
        android:id="@+id/delivery_charge_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gilroy"
        android:text="@string/delivery_charge"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/sub_total_tv"
        app:layout_constraintStart_toStartOf="@+id/sub_total_tv"
        app:layout_constraintTop_toBottomOf="@+id/sub_total_tv" />

    <TextView
        android:id="@+id/grand_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gilroy"
        android:text="@string/grand_total"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/delivery_charge_tv"
        app:layout_constraintTop_toBottomOf="@+id/delivery_charge_tv" />

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_primary_color_background"
        android:text="@string/confirm_delivery"
        android:onClick="OnConfirmClicked"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/button_ash_color_background"
        android:text="@string/cancel"
        android:onClick="OnCancelClicked"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/confirm_btn"
        app:layout_constraintTop_toTopOf="@+id/confirm_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>